tests/typec-test/test_out/function-parse-out.txt
error: expected Ident | '\' but got 'return'
 --> function\root.ctl:1:31
  |
1 | fn "default" main() -> unit { return 0 }
  |                               ^^^^^^ token located here
  |
  = info: list -> item -> function definition -> function body -> list -> expr -> unit expr

